WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239049
[GStreamer] Debugs logs from VideoSinkCommon are missing
https://bugs.webkit.org/show_bug.cgi?id=239049
Summary
[GStreamer] Debugs logs from VideoSinkCommon are missing
Philippe Normand
Reported
2022-04-10 10:27:32 PDT
.
Attachments
Patch
(1.98 KB, patch)
2022-04-10 10:30 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-04-10 10:30:07 PDT
Created
attachment 457203
[details]
Patch
EWS
Comment 2
2022-04-11 16:49:18 PDT
Committed
r292740
(
249524@main
): <
https://commits.webkit.org/249524@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457203
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-11 16:50:17 PDT
<
rdar://problem/91596546
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug