[GStreamer] Debugs logs from VideoSinkCommon are missing https://bugs.webkit.org/show_bug.cgi?id=239049

Patch by Philippe Normand <pnormand@igalia.com> on 2022-04-11
Reviewed by Adrian Perez de Castro.

When this new module was added, the logging support was lost due to missing logging category.

* platform/graphics/gstreamer/GStreamerVideoSinkCommon.cpp:
(webKitVideoSinkSetMediaPlayerPrivate):

Canonical link: https://commits.webkit.org/249524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292740 268f45cc-cd09-0410-ab3c-d52691b4dbfc